deployments/arr/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    matchLabels:
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      volumes:
      - name: qbittorrent
        persistentVolumeClaim:
          claimName: qbittorrent
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc-data
      - name: gluetun-config
        persistentVolumeClaim:
          claimName: gluetun
      - name: tun-device
        hostPath:
          path: /dev/net/tun
          type: CharDevice 
      - name: gluetun-cert-volume
        configMap:
          name: gluetun-cert-config
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent
        ports:
        - containerPort: 8080
          name: webui
        volumeMounts:
        - name: qbittorrent
          mountPath: /config
        - mountPath: /downloads
          readOnly: false
          name: media-volume
          subPath: downloads
      - name: gluetun
        image: qmcgaw/gluetun
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
          - name: gluetun-config
            mountPath: /gluetun
          - mountPath: /dev/net/tun
            name: tun-device
          - name: gluetun-cert-volume
            mountPath: /gluetun/client.crt
            subPath: client.crt
          - name: gluetun-cert-volume
            mountPath: /gluetun/client.key
            subPath: client.key
