deployments/arr/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: media
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31001
