deployments/arr/qbittorrent/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.qbittorrent.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: qbittorrent-service
          port: 8080
    - match: Host(`qbittorrent.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: qbittorrent-service
          port: 8080
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
